# rust-basic-backend

./: .gitignore  README.md
server/: .env  Cargo.toml  docker-compose.yml  run_ins.sh
server/.history/: Insomnia_2024-06-16.yaml  channel_action.rs  channel_router.rs  chat_router.rs
server/.recycle_bin/: chat_action.rs
server/.sqlx/: query-08a12fd2b004a91f03847d56e642cf579cab3c8a83c9083f000ff4acf53759ca.json  query-1f0ac0e94b95482bd107fb947643e286a1be35196be691a5c69344df64c2c13f.json  query-24c1bfbbc76f11ed5080e969efb6b21ea5510015235021be61bc5cde7ee238b8.json  query-28aa6b70760977dc007f4fa7195dcb172647b1e04f2dcc661b7f3a02abb15b2f.json  query-2a65610d2629b62ac8ca720c226c1737b13482321149f43049b51a10a6ecb657.json  query-3298dbbf27822955ed5cbeba9e2ea8227d730ebdcda9d22d66bad4bd7ca3ace2.json  query-44f945f7d3889c55aab28cf6e222f571033dc0c5fc25dfdab08c9da701569b6f.json  query-627335835e3c3c277ebacc55974510cd691001cf4b21146b0571e243d5910872.json  query-6348588bac0e9200e085aef06dff2f73fffb408767e77e350e925a062d9efce8.json  query-799ea9b71e6ba5a9a1753af6aee4e3b530c2fef56859609f1cf45f7135b6eec7.json  query-7f43bc08c82f41f60aae15ae94259156ed021f482521affbeb81e25c9e728a19.json  query-93145d37a871d255d954ced5ac82cdc3840b8c55ebf6aa2297e155d4d9c74377.json  query-938ab586372e64c777bd9c338605576af9ad0b45552e0e59ad9071da2e99292a.json  query-9debea4fe9078b2026bb3724be95f851f8f942495bff4bb6600a23ccb2c9e09b.json  query-9e7ebb7ef793c8ec89d35a51ae7a824a39d35a900cbbaa52477241824d468b66.json  query-a123f2398547683e817a07e0b2d1fff9f016699f51ea31332c4babe6d781b9db.json  query-a9941fe573db7405a5297028e9600c7b37be3979690c5d001f1e4c79391ba357.json  query-adc60c92a42c8845a0d5b13088f34ff0b4b2e1b7adca82ed6a9a102145f90db0.json  query-cd498f59ced658933a1d64815d5d14f278ae5c78d31dd8afa131bbc012a0b128.json  query-f3a95952499b1086e3b738f7ee9cfb854933b0a923ed608a399b91fb5fa1200e.json  query-fa941214cdc6d46cfb6c25e49e1ac5f52b0f41167cfb71a7a74b036ba4dc568e.json
server/db_init_query/: query_init.sql
server/src/: config.rs  main.rs
server/src/actions/: auth_actions.rs  channel_action.rs  chat_action.rs  communication_action.rs  hello_actions.rs  mod.rs  user_action.rs  user_actions.rs  user_setup_action.rs
(+37 files in other folders)
