[package]
name = "chatician"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.35.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["full"] }
tower-cookies = "0.10.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4"] }
